# VIDEO-EDITOR-PRO

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  CPP_INSTALL_GUIDE.md  CapCutClone.slnx  DEVELOPMENT_ROADMAP.md  README.md  a.html  config.ini  imgui.ini  run_vulkan_test.bat
.cache/clangd/index/: Application.cpp.0267398B356CDB92.idx  Application.h.B1C135634367C352.idx  AudioDecodeThread.cpp.E2945FEBCECA8701.idx  AudioDecodeThread.h.B6F6320CAB384BF9.idx  AudioPlayer.cpp.CC6E6E3EE96521BD.idx  AudioPlayer.h.1572ED5DCB58BE85.idx  CapCutClone.cpp.F29A07C81FD1A2DD.idx  Clip.h.860B3FD8D60305AF.idx  Configuration.cpp.91D2E228ACC09904.idx  Configuration.h.ADCC866CA7CD7FCE.idx  EffectLayer.cpp.6E7A7A55F66A3EDE.idx  EffectLayer.h.573827727A27CE71.idx  ExportManager.cpp.D56AA938B398D5FB.idx  ExportManager.h.EEE7C8D3A5BA7685.idx  IconsFontAwesome6.h.717CF8BC8E533A51.idx  Sticker.h.D4922729EA87E8C3.idx  TextureRenderer.cpp.EF3A5D3D0055AB37.idx  TextureRenderer.h.8EC27F3A4BFF52CC.idx  TimelineManager.cpp.EBF326014FFE5E63.idx  TimelineManager.h.788EF4813A0B173E.idx  TimelineThumbnails.cpp.6C47AB7CE58EA57C.idx  TimelineThumbnails.h.7AA6215613E27D75.idx  Track.h.EF89FB0DC0BF0422.idx  UIManager.cpp.23D890E080B7EB35.idx  UIManager.h.5143667EF4657A8E.idx  VideoEncoder.cpp.02080EEC9A91EE15.idx  VideoEncoder.h.5B60E16676FF1ADD.idx  VideoPlayer.cpp.EF84E06EA226A0A3.idx  VideoPlayer.h.E678E572C8C788F5.idx  miniaudio.h.499428D2A81C4CF0.idx
CapCutClone/: Application.cpp  Application.h  CapCutClone.cpp  CapCutClone.vcxproj  CapCutClone.vcxproj.filters  Configuration.cpp  Configuration.h
CapCutClone/Audio/: AudioContext.cpp  AudioContext.h
CapCutClone/Encoder/: CUDAFilters.cu  CUDAFilters.h  ExportManager.cpp  ExportManager.h  HardwareExportManager.cpp  HardwareExportManager.h  Phase2_DecodeWorker.cpp  VideoEncoder.cpp  VideoEncoder.h
CapCutClone/Rendering/: TextureRenderer.cpp  TextureRenderer.h  TextureRendererYUV.cpp
CapCutClone/Shaders/: nv12_to_rgb.comp  rgb_to_nv12.comp  rgb_to_uv.frag  rgb_to_y.frag  rgb_to_yuv.vert
CapCutClone/Timeline/: Clip.h  EffectLayer.cpp  EffectLayer.h  Sticker.h  TimelineManager.cpp  TimelineManager.h  Track.h
CapCutClone/UI/: TimelineThumbnails.cpp  TimelineThumbnails.h  UIManager.cpp  UIManager.h
CapCutClone/Video/: VideoPlayer.cpp  VideoPlayer.h
CapCutClone/Vulkan/: VulkanComputePipeline.cpp  VulkanComputePipeline.h  VulkanContext.cpp  VulkanContext.h  VulkanExportManager.cpp  VulkanExportManager.h  VulkanRenderPipeline.cpp  VulkanRenderPipeline.h  VulkanTest.cpp  VulkanTest.h
CapCutClone/Vulkan/Shaders/: RGB_to_NV12.comp
CapCutClone/x64/Debug/: CapCutClone.exe.recipe  CapCutClone.ilk  CapCutClone.vcxproj.FileListAbsolute.txt  vc145.idb
CapCutClone/x64/Debug/CapCutClone.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CapCutClone.lastbuildstate  CapCutClone.write.1u.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
